# javascript-data-files

./: CHANGELOG.md  CONTRIBUTING.md  README.md  dev_requirements.in  dev_requirements.txt  pyproject.toml
.github/workflows/: test.yml
scripts/: run_javascript_data_files_tests.sh
src/javascript/: __init__.py
src/javascript_data_files/: __init__.py  decoder.py  encoder.py
tests/: test_javascript.py  test_javascript_data_files.py
